chore: apply pending updates

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,22 @@
-GEMINI_API_KEY=
+GEMINI_API_KEY=your-gemini-api-key
 
-# SMTP settings for signup emails
-SMTP_HOST=mail.hasiripi.com
+# SMTP settings for signup/password reset emails (rotate credentials regularly)
+SMTP_HOST=smtp.yourprovider.com
 SMTP_PORT=465
 SMTP_SECURE=true
-SMTP_USER=dripfy@hasiripi.com
-SMTP_PASS=CHANGE_ME
+SMTP_USER=dripfy@example.com
+SMTP_PASS=please-change-me
 
 # Optional settings
-MAIL_FROM=Dripfy <dripfy@hasiripi.com>
-SIGNUP_NOTIFY_TO=dripfy@hasiripi.com
+MAIL_FROM=Dripfy MIS <dripfy@example.com>
+SIGNUP_NOTIFY_TO=ops@example.com
 SEND_WELCOME_EMAIL=true
+
+# Auth & session security (set to long random strings, rotate when staff changes)
+JWT_SECRET=replace-with-long-random-string
+AUTH_SECRET=replace-with-long-random-string
+JWT_COOKIE_MAX_AGE=900s
+
 API_PORT=4000
 CORS_ORIGINS=http://localhost:5173
 SIGNUP_CODE_TTL=600000
