--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "server": "node server/index.js",
-        "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "node --test server/__tests__/*.test.js",
-        "test:ui": "vitest run",
-        "build:deploy": "vite build && echo '✅ Build completed! Upload dist/ folder to hosting.com'"
-    },
+  "scripts": {
+    "dev": "vite",
+    "server": "node server/index.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "node --test server/__tests__/*.test.js",
+    "test:ui": "vitest run",
+    "build:deploy": "vite build && echo '✅ Build completed! Upload dist/ folder to hosting.com'"
+  },
   "dependencies": {
     "@google/genai": "^1.27.0",
     "bcrypt": "^6.0.0",
@@ -27,17 +27,18 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
-    "devDependencies": {
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
-        "@testing-library/user-event": "^14.6.1",
-        "@types/node": "^22.14.0",
-        "@vitejs/plugin-react": "^5.0.0",
-        "concurrently": "^9.2.1",
-        "jsdom": "^24.1.3",
-        "ts-node": "^10.9.2",
-        "typescript": "~5.8.2",
-        "vite": "^6.2.0",
-        "vitest": "^1.6.0"
-    }
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.2.1",
+    "jsdom": "^24.1.3",
+    "playwright": "^1.49.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0",
+    "vitest": "^1.6.0"
+  }
 }
