feat: add automation-ready chatbot service

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 GEMINI_API_KEY=your-gemini-api-key
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_TEMPERATURE=0.2
+KNOWLEDGE_BASE_LANGUAGES=en,tr
 
 # SMTP settings for signup/password reset emails (rotate credentials regularly)
 SMTP_HOST=smtp.yourprovider.com
