--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.27.0",
+    "elasticlunr": "^0.9.5",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
     "nodemailer": "^7.0.10",
+    "openai": "^4.73.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
