--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "vitest/globals"
     ],
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "allowJs": true,
