--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.27.0",
-    "elasticlunr": "^0.9.5",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "elasticlunr": "^0.9.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.4.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
     "nodemailer": "^7.0.10",
