--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
   "dependencies": {
     "@google/genai": "^1.27.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.12.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
     "dotenv": "^17.2.3",
     "elasticlunr": "^0.9.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.4.1",
-    "bullmq": "^5.12.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.10",
     "openai": "^4.73.0",
-    "xlsx": "^0.18.5",
-    "csv-parse": "^5.5.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "driver.js": "^1.3.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
